--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ body {
   text-align: center;
 }
 
+/* Search function location*/
 form {
-  background-color: #4654e1;
-  width: 300px;
+  background-color: #2e38a5;
   height: 44px;
-  border-radius: 5px;
+  border-radius: 50px;
+  position: absolute;
+  left:35%;
+  top:17%;
+  width:30%;
   display: flex;
   flex-direction: row;
   align-items: center;
